[tool.poetry]
name = "youtube-downloader"
version = "0.1.0"
description = ""
authors = ["aghyad albalkhi <aghyadalbalkhi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytube = "^10.8.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
